sass/pieces/_indexes.scss
.page-index {
    ol {
        margin: 0 0 1em;
        padding: 0;

        li {
            list-style: none;
        }

        ol {
            margin-left: 3em;

            li {
                list-style: disc;
            }
        }
    }

    h3 {
        font-size: 1.2em;
        margin: 0;
    }
}

.page-index.weeknotes {
    h2 {
        margin-bottom: 0;
    }

    #latest {
        margin: 0;
        padding: 0;
        display: grid;
        grid-template-columns: auto auto;
        column-gap: 30px;

        li {
            list-style: none;
            margin: 0 0 2em;
            padding: 0;
            max-width: 400px;
        }

        em {
            font-weight: bold;
            font-style: normal;
        }

        a {
            position: relative;
            color: $desert_storm;
            text-decoration: none;
            display: block;

            img {
                display: block;
                max-width: 100%;
                height: auto;
            }

            span {
                display: block;
                padding: 2px 5px;
                background: rgba(0, 0, 0, 0.5);
                outline: 1px solid $eerie_black;
                position: absolute;
                bottom: 10px;
                left: 10px;
                font-weight: bold;
            }
        }
    }
}

